[package]
name = "noctavox"
version = "0.2.7"
edition = "2024"
authors = ["Jaxx497"]
description = "A lightweight TUI music player for local files"
license = "MIT"
repository = "https://github.com/Jaxx497/NoctaVox/"
keywords = ["tui", "music", "audio", "player", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam = { version = "0.8.4", default-features = false, features = ["crossbeam-channel", "crossbeam-queue"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.14.0"
lofty = "0.24.0"
nohash-hasher = "0.2.0"
rand = "0.10.1"
ratatui = {version = "0.30.0", features = ["serde"]}
ratatui-textarea = "0.9.1"
rayon = "1.12.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"]}
spectrum-analyzer = "1.7.0"
toml = "1.0.3"
walkdir = "2.5.0"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
voxio = "0.1.4"
souvlaki = "0.7"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
windows = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "vox"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3
