[package]
name = "noctavox"
version = "0.2.2"
edition = "2024"
authors = ["Jaxx497"]
description = "A lightweight TUI music player for local files"
license = "MIT"
repository = "https://github.com/Jaxx497/NoctaVox/"
keywords = ["tui", "music", "audio", "player", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
crossbeam = { version = "0.8.4", default-features = false, features = ["crossbeam-channel", "crossbeam-queue"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.12.1"
lofty = "0.22.4"
nohash-hasher = "0.2.0"
rand = "0.9.2"
ratatui = {version = "0.30.0", features = ["serde"]}
rayon = "1.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"]}
toml = "0.9.10"
tui-textarea = {git = "https://github.com/rhysd/tui-textarea/", rev = "a5086767ee0831e319aec9432aaef495d8f280c4"}
walkdir = "2.5.0"
unicode-normalization = "0.1.25"
voxio = {verison = "0.1.0", path = "../voxio/" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[[bin]]
name = "vox"
path = "src/main.rs"
