[package]
name = "voxio"
version = "0.1.0"
edition = "2024"

[dependencies]
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
cpal = "0.17.1"
crossbeam = "0.8.4"
rtrb = "0.3.2"
rubato = "1.0.0"
symphonia = { version = "0.5.5", features = ["aac", "alac", "isomp4", "mp3", "mkv" ] }
symphonia-adapter-libopus = "0.2.5"
thiserror = "2.0.17"
